fix: Don't wrap on ToC overflow (#28)

--- a/src/assets/stylesheets/layout/_nav.scss
+++ b/src/assets/stylesheets/layout/_nav.scss
@@ -87,7 +87,6 @@
       padding: 0;
       & > .md-nav__link {
         padding-left: px2rem(12px);
-        height: px2rem(18px);
         line-height: px2rem(18px);
         &--active {
           border-left: 3px solid #6695FF;
